--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.2
   flutter_lints: ^1.0.0
-  mockito: ^5.0.15
+  mockito: ^5.0.16
   mocktail: ^0.1.4
 
 flutter:
